# mlops-hw1-ml-service

./: .gitignore  Dockerfile.backend  Dockerfile.dashboard  Makefile  README.md  clearml.conf  pyproject.toml
.dvc/: config
clearml/: docker-compose.yml
dashboard/: app.py
data/datasets/: .gitignore  cdaf6933b5554291a7886d84194f2ca1_iris_tiny.csv  iris_tiny.csv.dvc
data/models/: 18ad6ba352214983ab92c9eb92ebb030_logistic_regression.joblib
k8s/: backend-deployment.yaml  dashboard-deployment.yaml  minio.yaml  namespace.yaml
ml_service/: api_grpc.py  api_rest.py  clearml_utils.py  config.py  db_models.py  logging_config.py  ml_service_pb2.py  ml_service_pb2_grpc.py  model_registry.py  schemas.py
proto/: ml_service.proto
scripts/: grpc_client.py
